--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -14,6 +14,8 @@ jobs:
     name: Build image
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
