--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -13,6 +13,7 @@ jobs:
   build:
     name: Build image
     runs-on: ubuntu-latest
+    environment: Build and deploy
     steps:
       - uses: actions/checkout@v4
 
